cmake_minimum_required(VERSION 3.6)
project(rsync)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        doc/profile.txt
        doc/README-SGML
        doc/rsync.sgml
        lib/addrinfo.h
        lib/compat.c
        lib/dummy.in
        lib/getaddrinfo.c
        lib/getpass.c
        lib/inet_ntop.c
        lib/inet_pton.c
        lib/md5.c
        lib/mdfour.c
        lib/mdigest.h
        lib/permstring.c
        lib/permstring.h
        lib/pool_alloc.3
        lib/pool_alloc.c
        lib/pool_alloc.h
        lib/snprintf.c
        lib/sysacls.c
        lib/sysacls.h
        lib/sysxattrs.c
        lib/sysxattrs.h
        lib/wildmatch.c
        lib/wildmatch.h
        m4/have_type.m4
        m4/socklen_t.m4
        m4/validate_cache_system_type.m4
        packaging/bin/gpg
        packaging/lsb/rsync.spec
        packaging/lsb/rsync.xinetd
        packaging/solaris/build_pkg.sh
        packaging/systemd/rsync.service
        packaging/branch-from-patch
        packaging/cull_options
        packaging/git-status.pl
        packaging/nightly-rsync
        packaging/patch-update
        packaging/release-rsync
        packaging/var-checker
        popt/findme.c
        popt/findme.h
        popt/popt.c
        popt/popt.h
        popt/poptconfig.c
        popt/popthelp.c
        popt/poptint.h
        popt/poptparse.c
        popt/system.h
        support/savetransfer.c
        testhelp/maketree.py
        zlib/adler32.c
        zlib/ChangeLog
        zlib/compress.c
        zlib/crc32.c
        zlib/crc32.h
        zlib/deflate.c
        zlib/deflate.h
        zlib/gzguts.h
        zlib/inffast.c
        zlib/inffast.h
        zlib/inffixed.h
        zlib/inflate.c
        zlib/inflate.h
        zlib/inftrees.c
        zlib/inftrees.h
        zlib/trees.c
        zlib/trees.h
        zlib/zconf.h
        zlib/zlib.h
        zlib/zutil.c
        zlib/zutil.h
        access.c
        acls.c
        authenticate.c
        backup.c
        batch.c
        byteorder.h
        case_N.h
        checksum.c
        chmod.c
        cleanup.c
        clientname.c
        clientserver.c
        compat.c
        connection.c
        delete.c
        errcode.h
        exclude.c
        fileio.c
        flist.c
        generator.c
        getfsdev.c
        getgroups.c
        hashtable.c
        hlink.c
        ifuncs.h
        inums.h
        io.c
        io.h
        itypes.h
        loadparm.c
        log.c
        main.c
        match.c
        options.c
        params.c
        pipe.c
        progress.c
        receiver.c
        rounding.c
        rsync.c
        rsync.h
        sender.c
        socket.c
        syscall.c
        t_stub.c
        t_unsafe.c
        testrun.c
        tls.c
        token.c
        trimslash.c
        uidlist.c
        util.c
        util2.c
        wildtest.c
        xattrs.c)

add_executable(rsync ${SOURCE_FILES})